--- a/package.json
+++ b/package.json
@@ -17,12 +17,15 @@
     "@docusaurus/core": "2.0.0-beta.9",
     "@docusaurus/preset-classic": "2.0.0-beta.9",
     "@mdx-js/react": "^1.6.21",
+    "@react-three/drei": "^7.22.4",
+    "@react-three/fiber": "^7.0.19",
     "@svgr/webpack": "^5.5.0",
     "clsx": "^1.1.1",
     "file-loader": "^6.2.0",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "three": "^0.134.0",
     "url-loader": "^4.1.1"
   },
   "browserslist": {
