--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-p5": "^1.3.22",
     "simplex-noise": "^3.0.0",
     "three": "^0.134.0",
     "url-loader": "^4.1.1"
